crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__separate_lexical_helpers_with_the_same_name_do_not_collide.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nfirst x =\n    let\n        helper y = x\n    in\n    helper ()\nsecond x =\n    let\n        helper y = y\n    in\n    helper x\nmain = (first True, second ())\n"
---
--- core
let first#2 : 'erased -> 'erased = \x#4 : 'erased -> let helper#5 : 'erased -> 'erased = \y#6 : 'erased -> x#4 in
helper#5 () in
let second#3 : 'erased -> 'erased = \x#7 : 'erased -> let helper#8 : 'erased -> 'erased = \y#9 : 'erased -> y#9 in
helper#8 x#7 in
let main#1 : (bool, unit) = constr 0 (first#2 true) (second#3 ()) in
main#1
--- uplc
(program 1.1.0
  [(lam first_2
    [(lam second_3
      [(lam main_1 main_1)
        (constr 0 [first_2 (con bool True)] [second_3 (con unit ())])])
      (lam x_7 [(lam helper_8 [helper_8 x_7]) (lam y_9 y_9)])])
    (lam x_4 [(lam helper_5 [helper_5 (con unit ())]) (lam y_6 x_4)])])
--- result
(constr 0 (con bool True) (con unit ()))
--- logs
[]
--- budget
cpu: 480100, memory: 3100
