crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_data_encoding_preserves_nominal_constructors.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype First = First\ntype Second = Second\nencodeFirst : First -> Data\nencodeFirst value =\n    case value of\n        First -> Builtin.constrData 0 []\nencodeSecond : Second -> Data\nencodeSecond value =\n    case value of\n        Second -> Builtin.constrData 1 []\nmain = Builtin.equalsData (encodeFirst First) (encodeSecond Second)\n"
---
--- unoptimized Core
let fromInt#5 : int -> int = \value#9 : int -> value#9 in
let encodeFirst#2 : Main.First -> Data = \value#4 : Main.First -> let match#6 : Main.First = value#4 in
constrData (fromInt#5 0) (con (list data) []) in
let encodeSecond#3 : Main.Second -> Data = \value#7 : Main.Second -> let match#8 : Main.Second = value#7 in
constrData (fromInt#5 1) (con (list data) []) in
let main#1 : bool = equalsData (encodeFirst#2 (constrData 0 (con (list data) []))) (encodeSecond#3 (constrData 0 (con (list data) []))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_5
    [(lam encodeFirst_2
      [(lam encodeSecond_3
        [(lam main_1 main_1)
          [[(builtin equalsData)
            [encodeFirst_2 [[(builtin constrData) (con integer 0)] (con (list data) [])]]]
            [encodeSecond_3 [[(builtin constrData) (con integer 0)] (con (list data) [])]]]])
        (lam value_7
          [(lam match_8
            [[(builtin constrData) [fromInt_5 (con integer 1)]] (con (list data) [])])
            value_7])])
      (lam value_4
        [(lam match_6
          [[(builtin constrData) [fromInt_5 (con integer 0)]] (con (list data) [])])
          value_4])])
    (lam value_9 value_9)])
--- optimized Core
false
--- optimized UPLC
(program 1.1.0 (con bool False))
--- result
(con bool False)
--- logs
[]
--- budget
cpu: 1911968, memory: 5329
