crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_little_constructor_patterns_and_tuples.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype option 'a = None | Some 'a\nunwrap fallback opt =\n    case opt of\n        None -> fallback\n        Some x -> x\nmain : unit\nmain = unwrap () (Some ())\n"
---
--- unoptimized Core
let unwrap#2 : 'erased -> Main.option 'erased -> 'erased = \fallback#5 : 'erased opt#6 : Main.option 'erased -> let match#8 : Main.option 'erased = opt#6 in
case@Tag match#8 of
  0 -> fallback#5
  1 field#9 -> let x#7 : 'erased = field#9 in
  x#7 in
let fromUnit#3 : unit -> unit = \value#10 : unit -> value#10 in
let main#1 : unit = unwrap#2 (fromUnit#3 ()) ((\field#4 : unit -> constr 1 field#4) (fromUnit#3 ())) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam unwrap_2
    [(lam fromUnit_3
      [(lam main_1 main_1)
        [[unwrap_2 [fromUnit_3 (con unit ())]]
          [(lam field_4 (constr 1 field_4)) [fromUnit_3 (con unit ())]]]])
      (lam value_10 value_10)])
    (lam fallback_5
      (lam opt_6
        [(lam match_8 (case match_8 fallback_5 (lam field_9 [(lam x_7 x_7) field_9])))
          opt_6]))])
--- optimized Core
()
--- optimized UPLC
(program 1.1.0 (con unit ()))
--- result
(con unit ())
--- logs
[]
--- budget
cpu: 560100, memory: 3600
