crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_reachable_binding_chain.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nx : int\nx = 40\ny : int\ny = Builtin.addInteger x 2\nunused : int\nunused = fail\nmain : int\nmain = y\n"
---
--- unoptimized Core
let fromInt#4 : int -> int = \value#5 : int -> value#5 in
let x#3 : int = fromInt#4 40 in
let y#2 : int = addInteger x#3 (fromInt#4 2) in
let main#1 : int = y#2 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_4
    [(lam x_3
      [(lam y_2 [(lam main_1 main_1) y_2])
        [[(builtin addInteger) x_3] [fromInt_4 (con integer 2)]]])
      [fromInt_4 (con integer 40)]])
    (lam value_5 value_5)])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 469308, memory: 2402
