crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_static_second_parameter.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ncount : int -> int -> int\ncount n step =\n    if Builtin.equalsInteger n 0 then 0\n    else Builtin.addInteger step (count (Builtin.subtractInteger n 1) step)\nmain : int\nmain = count 3 7\n"
---
--- core
let fromInt#3 : int -> int = \value#6 : int -> value#6 in
let count#2 : int -> int -> int = \n#4 : int step#5 : int -> (\self#7 : 'erased -> self#7 self#7) (\self#7 : 'erased n#4 : int -> case@Bool equalsInteger n#4 (fromInt#3 0) of
  True -> fromInt#3 0
  False -> addInteger step#5 (self#7 self#7 (subtractInteger n#4 (fromInt#3 1)))) n#4 in
let main#1 : int = count#2 (fromInt#3 3) (fromInt#3 7) in
main#1
--- uplc
(program 1.1.0
  [(lam fromInt_3
    [(lam count_2
      [(lam main_1 main_1)
        [[count_2 [fromInt_3 (con integer 3)]] [fromInt_3 (con integer 7)]]])
      (lam n_4
        (lam step_5
          [[(lam self_7 [self_7 self_7])
            (lam self_7
              (lam n_4
                [(lam generated_8
                  (case
                    generated_8
                    [[(builtin addInteger) step_5]
                      [[self_7 self_7] [[(builtin subtractInteger) n_4] [fromInt_3 (con integer 1)]]]]
                    [fromInt_3 (con integer 0)]))
                  [[(builtin equalsInteger) n_4] [fromInt_3 (con integer 0)]]]))]
            n_4]))])
    (lam value_6 value_6)])
--- result
(con integer 21)
--- logs
[]
--- budget
cpu: 2944680, memory: 13416
